manifest/objects/LVGO__LVGO_Automation_Switch__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>LVGO__Flows__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Switch to Control execution of  Flows</description>
        <inlineHelpText>Turning this flag on runs all the LVGO Flows</inlineHelpText>
        <label>Enable Flows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__ProcessBuilders__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Switch to Control execution of  Process Builders</description>
        <inlineHelpText>Turning this flag on runs all the LVGO Process Builders</inlineHelpText>
        <label>Enable Process Builders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Triggers__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Switch to Control execution of  Triggers</description>
        <inlineHelpText>Turning this flag on runs all the LVGO Triggers</inlineHelpText>
        <label>Enable Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Validations__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Switch to control execution of  Validations</description>
        <inlineHelpText>Turning this flag on runs all the LVGO validations</inlineHelpText>
        <label>Enable Validations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Workflows__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Switch to Control execution of  Worklfow Rules</description>
        <inlineHelpText>Turning this flag on runs all the LVGO Worklfows</inlineHelpText>
        <label>Enable Workflow Rules</label>
        <type>Checkbox</type>
    </fields>
    <label>LVGO Automation Switch</label>
</CustomObject>